...
import coil.request.ImageRequest
import daniel.bertoldi.geographyquiz.R
import daniel.bertoldi.quiz.R as QuizR
import daniel.bertoldi.utilities.design.tokens.AliceBlue
import daniel.bertoldi.utilities.design.tokens.BrunswickGreen

const val HOME_SCREEN_TEST_TAG = "HomeScreen"
const val PLAY_BUTTON_TEST_TAG = "PlayButton"

@Composable
internal fun LoadingComponent() {
    Box(
        modifier = Modifier.fillMaxSize(),
        contentAlignment = Alignment.Center,
...
