...
import daniel.bertoldi.geographyquiz.presentation.viewmodel.GameState
import daniel.bertoldi.geographyquiz.presentation.viewmodel.GameStep
import kotlinx.coroutines.delay
import kotlin.time.Duration
import kotlin.time.Duration.Companion.seconds

const val DIALOG_CONFIRM_TEST_TAG = "OnConfirm"
const val COUNTRY_OPTION_TEST_TAG = "CountryOption"
const val NEXT_FLAG_TEST_TAG = "NextFlag"

@Composable
internal fun FlagGameComponent(
    gameState: GameState,
    optionClick: (String) -> Unit,
    nextRound: () -> Unit,
...
